fix: reduce layout shifts by setting better fallback fonts

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -14,14 +14,14 @@
 }
 
 body {
-    font-family: "Inter", Arial, sans-serif;
+    font-family: "Inter", "Inter fallback", Arial, sans-serif;
     font-size: 1.1em;
     font-style: normal;
     text-rendering: optimizeLegibility;
 }
 
 code, .monospaced {
-    font-family: "JetBrains Mono", monospace;
+    font-family: "JetBrains Mono", "JetBrains Mono fallback", monospace;
     font-size: 0.9em;
 }
 
